@@ -1,11 +1,22 @@
+# Wire up travis
 language: python
 
-python:
-  - "2.6"
-  - "2.7"
-  - "3.2"
-  - "3.3"
+env:
+  - TOXENV=py26
+  - TOXENV=py27
+  - TOXENV=py32
+  - TOXENV=py33
+  - TOXENV=py34
+  - TOXENV=pypy
+  - TOXENV=pypy3
+  - TOXENV=cover
 
-install: pip install tox
+install:
+  - travis_retry pip install tox
 
-script: tox -e py${TRAVIS_PYTHON_VERSION//[.]/}
+script:
+  - travis_retry tox
+
+notifications:
+  email:
+    - pyramid-checkins@lists.repoze.org
