@@ -1,6 +1,6 @@
 [tox]
 envlist = 
-    py26,py27,py32,py33,pypy,cover
+    py26,py27,py32,py33,py34,pypy,pypy3,cover
 
 # chameleon fails on jython
 
